fix bugs for Disqus

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ github_username:  Alchemistyui
 # google-analytics: UA-163806439-1
 
 # Disqus
-disqus-shortname: Ruoyue
+disqus-shortname: thedevslot
 
 # Name of the Author
 author-name: Ruoyue Shen
