--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ description: いつか待ってれば、いいことあるかもよ。
 # Keywords of the Site
 # site-keywords: Site, Template, Theme
 # URL for the Image of custom Favicon
-# favicon-url: /assets/images/moon.png
+favicon-url: /assets/images/sites/moon.png
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: /assets/images/sea3.jpg
+heroimage: /assets/images/sites/sea3.jpg
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
@@ -45,7 +45,7 @@ disqus-shortname: thedevslot
 # Name of the Author
 author-name: Ruoyue Shen
 # URL for the Image of the Author
-author-image: /assets/images/IMG_4703.jpg
+author-image: /assets/images/sites/my_img1.jpg
 # 60 Words About the Author
 author-about: I am a doctoral student at Tokyo Institute of Technology. My primary research interests are vision-language multi-modal modeling and video understanding. I recieve my M.S. degree in Computer Science from Tokyo Institute of Technology, Japan, in 2022. I received my bachelor's degree in Software Engineering from The University of Electronic Science and Technology of China (UESTC) in 2020.
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
