change photo and update paper info

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ disqus-shortname: thedevslot
 # Name of the Author
 author-name: Ruoyue Shen
 # URL for the Image of the Author
-author-image: /assets/images/sites/my_img2.png
+author-image: /assets/images/sites/my_img3.jpg
 # 60 Words About the Author
 author-about: I am a doctoral student at Tokyo Institute of Technology. My primary research interests are vision-language multi-modal modeling and video understanding. I recieve my M.S. degree in Computer Science from Tokyo Institute of Technology, Japan, in 2022. I received my bachelor's degree in Software Engineering from The University of Electronic Science and Technology of China (UESTC) in 2020.
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
